# cranelift

./: Cargo.toml  README.md  publish-all.sh
cranelift-bforest/: Cargo.toml
cranelift-codegen/: Cargo.toml
cranelift-codegen/meta/: Cargo.toml
cranelift-codegen/shared/: Cargo.toml
cranelift-entity/: Cargo.toml
cranelift-faerie/: Cargo.toml
cranelift-filetests/: Cargo.toml
cranelift-frontend/: Cargo.toml  README.md
cranelift-frontend/src/: frontend.rs  lib.rs  switch.rs
cranelift-module/: Cargo.toml
cranelift-native/: Cargo.toml
cranelift-object/: Cargo.toml
cranelift-preopt/: Cargo.toml
cranelift-reader/: Cargo.toml
cranelift-serde/: Cargo.toml
cranelift-simplejit/: Cargo.toml  README.md
cranelift-simplejit/examples/: simplejit-minimal.rs
cranelift-simplejit/tests/: basic.rs
cranelift-umbrella/: Cargo.toml
cranelift-umbrella/src/: lib.rs
cranelift-wasm/: Cargo.toml  README.md
cranelift-wasm/src/: code_translator.rs  func_translator.rs  lib.rs  state.rs  translation_utils.rs
cranelift-wasm/src/environ/: dummy.rs  spec.rs
cranelift-wasm/src/state/: func_state.rs  module_state.rs
src/: wasm.rs
