[package]
authors = ["Forked from work done by The Cranelift Project Developers"]
name = "wasmer-clif-fork-frontend"
version = "0.31.0"
description = "Cranelift IR builder helper"
license = "Apache-2.0 WITH LLVM-exception"
documentation = "https://cranelift.readthedocs.io/"
categories = ["no-std"]
repository = "https://github.com/wasmerio/cranelift/tree/wasmer"
readme = "README.md"
edition = "2018"

[dependencies]
cranelift-codegen = { version = "0.31.0", default-features = false }
target-lexicon = { version = "0.4.0", default-features = false }
log = { version = "0.4.6", default-features = false }
hashmap_core = { version = "0.1.9", optional = true }

[features]
default = ["std"]
std = ["cranelift-codegen/std"]
core = ["hashmap_core", "cranelift-codegen/core"]

[badges]
maintenance = { status = "experimental" }
travis-ci = { repository = "CraneStation/cranelift" }
