[package]
authors = ["Forked from work done by The Cranelift Project Developers"]
name = "wasmer-clif-fork-frontend"
version = "0.52.0"
description = "Cranelift IR builder helper"
license = "Apache-2.0 WITH LLVM-exception"
documentation = "https://cranelift.readthedocs.io/"
categories = ["no-std"]
repository = "https://github.com/wasmerio/cranelift/tree/wasmer"
readme = "README.md"
edition = "2018"

[dependencies]
cranelift-codegen = { path = "../cranelift-codegen", version = "0.52.0", default-features = false }
target-lexicon = "0.9"
log = { version = "0.4.6", default-features = false }
hashbrown = { version = "0.6", optional = true }
smallvec = { version = "1.0.0" }

[features]
default = ["std", "basic-blocks"]
std = ["cranelift-codegen/std"]
core = ["hashbrown", "cranelift-codegen/core"]

# Temporary feature that enforces basic block semantics.
basic-blocks = ["cranelift-codegen/basic-blocks"]

[badges]
maintenance = { status = "experimental" }
travis-ci = { repository = "bytecodealliance/cranelift" }
