[package]
name = "wasmer-clif-fork-simplejit"
version = "0.32.0"
authors = ["Forked from work done by The Cranelift Project Developers"]
description = "A simple JIT library backed by Cranelift"
repository = "https://github.com/wasmerio/cranelift/tree/wasmer"
documentation = "https://cranelift.readthedocs.io/"
license = "Apache-2.0 WITH LLVM-exception"
readme = "README.md"
edition = "2018"

[dependencies]
cranelift-codegen = "0.31.0"
cranelift-module = "0.31.0"
cranelift-native = "0.31.0"
region = "2.0.0"
libc = { version = "0.2.42" }
errno = "0.2.4"
target-lexicon = { version = "0.4.0" }

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winbase", "memoryapi"] }

[dev-dependencies]
cranelift = { version = "0.31.0" }
wasmer-clif-fork-frontend = { path = "../cranelift-frontend", version = "0.31.0" }
cranelift-entity = { version = "0.31.0" }

[badges]
maintenance = { status = "experimental" }
travis-ci = { repository = "CraneStation/cranelift" }
