[package]
authors = ["The Cranelift Project Developers"]
name = "cranelift"
version = "0.31.0"
description = "Umbrella for commonly-used cranelift crates"
license = "Apache-2.0 WITH LLVM-exception"
documentation = "https://cranelift.readthedocs.io/"
repository = "https://github.com/CraneStation/cranelift"
categories = ["no-std"]
readme = "README.md"
keywords = ["compile", "compiler", "jit"]
edition = "2018"

[dependencies]
cranelift-codegen = { path = "../cranelift-codegen", version = "0.31.0", default-features = false }
wasmer-clif-fork-frontend = { path = "../cranelift-frontend", version = "0.31.0", default-features = false }

[features]
default = ["std"]
std = ["cranelift-codegen/std", "wasmer-clif-fork-frontend/std"]
core = ["cranelift-codegen/core", "wasmer-clif-fork-frontend/core"]

[badges]
maintenance = { status = "experimental" }
travis-ci = { repository = "CraneStation/cranelift" }
