[package]
name = "wasmer-clif-fork-wasm"
version = "0.52.0"
authors = ["Forked from work done by The Cranelift Project Developers"]
license = "Apache-2.0 WITH LLVM-exception"
description = "Translator from WebAssembly to Cranelift IR"
repository = "https://github.com/wasmerio/cranelift/tree/wasmer"
edition = "2018"

[dependencies]
wasmparser = { version = "0.45.0", default-features = false }
cranelift-codegen = { version = "0.52.0", default-features = false }
cranelift-entity = { version = "0.52.0" }
wasmer-clif-fork-frontend = { version = "0.52.0", default-features = false }
hashbrown = { version = "0.6", optional = true }
log = { version = "0.4.6", default-features = false }
serde = { version = "1.0.94", features = ["derive"], optional = true }
thiserror = "1.0.4"

[dev-dependencies]
wabt = "0.9.1"
target-lexicon = "0.9"

[features]
default = ["std", "basic-blocks"]
std = ["cranelift-codegen/std", "wasmer-clif-fork-frontend/std"]
core = ["hashbrown", "cranelift-codegen/core", "wasmer-clif-fork-frontend/core"]
enable-serde = ["serde"]

# Temporary feature that enforces basic block semantics.
basic-blocks = ["cranelift-codegen/basic-blocks", "wasmer-clif-fork-frontend/basic-blocks"]

[badges]
maintenance = { status = "experimental" }
travis-ci = { repository = "bytecodealliance/cranelift" }
