[package]
name = "wasmer-clif-fork-wasm"
version = "0.59.0"
authors = ["Forked from work done by The Cranelift Project Developers"]
license = "Apache-2.0 WITH LLVM-exception"
description = "Translator from WebAssembly to Cranelift IR"
repository = "https://github.com/wasmerio/cranelift/tree/wasmer"
edition = "2018"

[dependencies]
wasmparser = { version = "0.51", default-features = false }
cranelift-codegen = { path = "../cranelift-codegen", version = "0.59.0", default-features = false }
cranelift-entity = { path = "../cranelift-entity", version = "0.59.0" }
wasmer-clif-fork-frontend = { path = "../cranelift-frontend", version = "0.59.0", default-features = false }
hashbrown = { version = "0.6", optional = true }
log = { version = "0.4.6", default-features = false }
serde = { version = "1.0.94", features = ["derive"], optional = true }
thiserror = "1.0.4"

[dev-dependencies]
wat = "1.0.9"
target-lexicon = "0.10"

[features]
default = ["std"]
std = ["cranelift-codegen/std", "wasmer-clif-fork-frontend/std"]
core = ["hashbrown", "cranelift-codegen/core", "wasmer-clif-fork-frontend/core"]
enable-serde = ["serde"]

[badges]
maintenance = { status = "experimental" }
travis-ci = { repository = "bytecodealliance/cranelift" }
